--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
+  "typings": "dist/src/index.d.ts",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
