--- a/package.json
+++ b/package.json
@@ -45,11 +45,9 @@
   },
   "author": "lujs",
   "license": "MIT",
-  "dependencies": {
-    "react": "^16.12.0",
-    "rxjs": "^6.6.3"
-  },
   "devDependencies": {
+    "react": "^16.12.0",
+    "rxjs": "^6.6.3",
     "@testing-library/react-hooks": "^3.4.2",
     "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
