--- a/package.json
+++ b/package.json
@@ -71,6 +71,14 @@
     "np": "^7.0.0",
     "prettier": "^1.19.1",
     "react-test-renderer": "^17.0.1",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "@types/lodash.at": "^4.6.6",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/lodash.isequal": "^4.5.5"
+  },
+  "dependencies": {
+    "lodash.at": "^4.6.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0"
   }
 }
