--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
     "np": "^7.0.0",
     "prettier": "^1.19.1",
     "react-test-renderer": "^17.0.1",
+    "typescript": "^4.5.5",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
+    "eventemitter3": "^4.0.7",
     "lodash.at": "^4.6.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
