--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "author": "lujs",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.6"
+    "react": ">=16.9.0"
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^3.4.2",
@@ -56,9 +56,8 @@
     "@types/lodash.isequal": "^4.5.5",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
-    "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.5",
-    "dumi": "^1.0.9",
+    "dumi": "^1.1.38",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
@@ -70,7 +69,7 @@
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
-    "np": "^7.0.0",
+    "np": "^7.6.0",
     "prettier": "^1.19.1",
     "react-test-renderer": "^17.0.1",
     "typescript": "^4.5.5",
@@ -78,9 +77,7 @@
   },
   "dependencies": {
     "eventemitter3": "^4.0.7",
-    "lodash.at": "^4.6.0",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.isequal": "^4.5.0",
-    "rxjs": "^6.6.3"
+    "lodash.isequal": "^4.5.0"
   }
 }
